--- a/FE/landingPage/registration.html
+++ b/FE/landingPage/registration.html
@@ -8,19 +8,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="../res/js/myScript1.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link href="../../res/css/mystyle.css">
+    <link  rel="stylesheet" href="../../res/css/mystyle.css">
     <title>beste.brettspiele.at</title>
 </head>
 <body>
     
 <!--USE JSON-->
 <!--Object Oriented Classes for User (user.class.php)-->
+<!--USE JSON-->
+
 
 <!--Registrierungsformular-->
 <container>
 
     <div class="input_container">
-        <form name="formValidation" id="formValidation" action="valid.html">
+        <form name="formValidation" id="formValidation" action="valid.html" method="post">
             <!--Anrede-->
             <div class="input_row">
                 <input type="text" name="Anrede" placeholder="Anrede" required>
