--- a/FE/landingPage/registration.html
+++ b/FE/landingPage/registration.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="../res/js/myScript1.js"></script>
+    <script src="../res/js/myscript.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link  rel="stylesheet" href="../../res/css/mystyle.css">
     <title>beste.brettspiele.at</title>
@@ -34,16 +34,19 @@
                 <input type="text" name="Nachname" placeholder="Nachname" required>
             </div>
             <!--Adresse-->
+            <div id="adresse">
+                <label>Adresse:</label>
             <div class="input_row">
                 <input type="text" name="Adresse" placeholder="Adresse" required>
             </div>
             <!--PLZ-->
-            <div class="input_row">
+            <div class="input_row adr">
                 <input type="text" name="PLZ" placeholder="PLZ" required>
             </div>
             <!--Ort-->
-            <div class="input_row">
+            <div class="input_row adr">
                 <input type="text" name="Ort" placeholder="Ort" required>
+            </div>
             </div>
             <!--Emailadresse-->
             <div class="input_row">
@@ -54,12 +57,12 @@
                 <input type="text" name="Benutzername" placeholder="Benutzername" required>
             </div>
             <!--Passwort-->
-            <div class="input_row">
-                <input type="text" name="Passwort" placeholder="Passwort" required>
+            <div class="input_row pw">
+                <input type="password" name="Passwort" placeholder="Passwort" required>
             </div>
             <!--Passwort Wiederholung-->
-            <div class="input_row">
-                <input type="text" name="Passwort Wiederholung" placeholder="Passwort Wiederholung" required>
+            <div class="input_row pw">
+                <input type="password" name="Passwort Wiederholung" placeholder="Passwort Wiederholung" required>
             </div>
             <!--Zahlungsinformationen-->
             <div class="input_row">
