--- a/FE/landingPage/registration.html
+++ b/FE/landingPage/registration.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="../res/js/myscript.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <script src="../../res/js/myscript.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link  rel="stylesheet" href="../../res/css/mystyle.css">
     <title>beste.brettspiele.at</title>
@@ -34,20 +35,22 @@
                 <input type="text" name="Nachname" placeholder="Nachname" required>
             </div>
             <!--Adresse-->
-            <div id="adresse">
-                <label>Adresse:</label>
-            <div class="input_row">
-                <input type="text" name="Adresse" placeholder="Adresse" required>
-            </div>
-            <!--PLZ-->
-            <div class="input_row adr">
-                <input type="text" name="PLZ" placeholder="PLZ" required>
-            </div>
-            <!--Ort-->
-            <div class="input_row adr">
-                <input type="text" name="Ort" placeholder="Ort" required>
-            </div>
-            </div>
+            <label>Adresse:</label>
+                <div>   
+                    <div class="input_row">
+                        <input type="text" name="Strasse" placeholder="Strasse/Nr." required>
+                    </div>
+                </div>
+                <div id="adresse">
+                    <!--PLZ-->
+                    <div class="input_row adr">
+                        <input type="text" name="PLZ" placeholder="PLZ" required>
+                    </div>
+                    <!--Ort-->
+                    <div class="input_row adr">
+                        <input type="text" name="Ort" placeholder="Ort" required>
+                    </div>
+                </div>
             <!--Emailadresse-->
             <div class="input_row">
                 <input type="text" name="Emailadresse" placeholder="Emailadresse" required>
@@ -77,8 +80,10 @@
 </container>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script type="text/javascript" src="../../res/js/myscript.js"></script>
 </body>
 
 </html>
