--- a/FE/landingPage/registration.html
+++ b/FE/landingPage/registration.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-    <script src="../../res/js/myscript.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link  rel="stylesheet" href="../../res/css/mystyle.css">
     <title>beste.brettspiele.at</title>
@@ -21,7 +17,7 @@
 <container>
 
     <div class="input_container">
-        <form name="formValidation" id="formValidation" action="valid.html" method="post">
+        <form name="formValidation" id="formValidation" action="../../BE/spring/backend.java" method="post">
             <!--Anrede-->
             <div class="input_row">
                 <input type="text" name="Anrede" placeholder="Anrede" required>
@@ -79,10 +75,9 @@
 
 </container>
 
-
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 <script type="text/javascript" src="../../res/js/myscript.js"></script>
 </body>
 
